# HARVEST

./: .gitignore  README.md  pyproject.toml  repair_marvin_tesseract.ps1
configs/: harvest_1926.yaml
docs/: IMPLEMENTATION.md  effocr-harvest-design.md
environments/: tesseract.yml
scripts/: README.md
scripts/marvin/: deploy_from_windows.ps1  setup_tesseract.sh
scripts/ocr_models/: README.md
scripts/ocr_models/chandra/: INSTALL.md  run_chandra_ocr.py
scripts/ocr_models/effocr/: INSTALL.md  README.md  run_effocr_ocr.py
scripts/ocr_models/paddle/: INSTALL.md  run_paddle_ocr.py
scripts/ocr_models/surya/: INSTALL.md  run_surya_ocr.py
scripts/ocr_models/tesseract/: ocr_crop.py  tesseract_ocr.py
scripts/parsers/: README.md
scripts/pipeline/: run_pipeline.py
scripts/postprocess/: validate_results.py
scripts/slurm/: run_cpu_pipeline.sbatch  run_effocr.sbatch  run_marvin_tesseract.sbatch
scriptss/: README.md
scriptss/ocr_models/: README.md
scriptss/ocr_models/chandra/: INSTALL.md
scriptss/ocr_models/surya/: INSTALL.md  run_surya_ocr.py
scriptss/ocr_models/tesseract/: ocr_crop.py
scriptss/slurm/: run_gpu_ocr.sbatch
src/harvest_ocr/: __init__.py  benchmark.py  cli.py  export.py  ingest.py  layout.py  pipeline.py  preprocess.py  types.py  utils.py  validation.py
src/harvest_ocr/ocr/: __init__.py  base.py  chandra.py  html.py  paddle.py  surya.py  tesseract.py
src/harvest_ocr/parsers/: __init__.py  (+1 more)
tests/: test_effocr_adapter.py  test_export.py  test_html.py  test_numeric_parser.py  test_target_config.py  test_utils.py  test_validation.py
