[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harvest-ocr"
version = "0.1.0"
description = "Reproducible OCR and table-extraction pipeline for historical agricultural yearbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
vision = ["opencv-python-headless>=4.9"]
tesseract = ["pytesseract>=0.3.13"]
html = ["beautifulsoup4>=4.12", "lxml>=5.0"]
paddle = ["paddleocr>=3.3"]
chandra = ["chandra-ocr[hf]>=0.2"]
surya = ["surya-ocr>=2.0"]
dev = ["pytest>=8.0"]
base = [
  "opencv-python-headless>=4.9",
  "pytesseract>=0.3.13",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.scripts]
harvest-ocr = "harvest_ocr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

